--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.14.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-progress": "^1.1.7",
@@ -18,6 +19,10 @@
     "@vercel/analytics": "^1.1.1",
     "@vercel/blob": "^1.1.1",
     "class-variance-authority": "^0.7.1",
+    "date-fns": "^4.1.0",
+    "docx-templates": "^4.14.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.540.0",
     "next": "13.4.12",
     "next-auth": "^4.24.7",
@@ -27,6 +32,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "resend": "^6.0.1",
     "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1"
   },
@@ -40,6 +46,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.4.12",
     "postcss": "^8",
+    "prisma": "^6.14.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
