--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "@prisma/client": "^6.14.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.15",
     "@tanstack/react-query": "^5.85.5",
     "@vercel/analytics": "^1.1.1",
     "@vercel/blob": "^1.1.1",
@@ -33,8 +38,10 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "resend": "^6.0.1",
+    "sonner": "^2.0.7",
     "swr": "^2.3.6",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "three": "^0.179.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -47,6 +54,7 @@
     "eslint-config-next": "13.4.12",
     "postcss": "^8",
     "prisma": "^6.14.0",
+    "supabase": "^2.34.3",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
