--- a/.env.example
+++ b/.env.example
@@ -1,93 +1,65 @@
 # =============================================================================
-# STORM BERRY V1 - ENVIRONMENT VARIABLES TEMPLATE
+# AI/ML PROVIDER KEYS (REQUIRED FOR AI FUNCTIONALITY)
 # =============================================================================
-# Copy this file to .env.local and fill in your actual values
-# Never commit .env.local to version control!
+
+# Groq API Key (PRIMARY for GPT-OSS 120B - ultra-fast inference)
+# Get from: https://console.groq.com/
+GROQ_API_KEY="put-your-api-key-here"
+
+# OpenRouter API Key (FALLBACK for GPT-OSS 120B and Gemini 2.5 Flash Image)
+# Get from: https://openrouter.ai/
+OPENROUTER_API_KEY="put-your-api-key-here"
+
+# Google Gemini API Key (for Gemini 2.5 Pro/Flash text models)
+# Get from: https://aistudio.google.com/app/apikey
+GEMINI_API_KEY="put-your-api-key-here"
+
+# OpenAI API Key (for GPT models - currently disabled but available)
+OPENAI_API_KEY="put-your-api-key-here"
 
 # =============================================================================
-# EMAIL SERVICES
+# AUTHENTICATION & DATABASE
 # =============================================================================
-RESEND_API_KEY=re_your_resend_api_key_here
 
-# =============================================================================
-# AI/ML PROVIDERS
-# =============================================================================
-# OpenAI API Key (Required for GPT models)
-OPENAI_API_KEY=sk-your-openai-api-key-here
-
-# Google Gemini API Key (Required for Gemini models)
-GEMINI_API_KEY=your-gemini-api-key-here
-GOOGLE_AI_API_KEY=your-gemini-api-key-here
-
-# OpenRouter API Key (Required for GPT-OSS 120B)
-OPENROUTER_API_KEY=your-openrouter-api-key-here
-
-# Optional AI Providers
-ANTHROPIC_API_KEY=your-anthropic-api-key-here
-COHERE_API_KEY=your-cohere-api-key-here
-
-# =============================================================================
-# CACHING & QUEUES
-# =============================================================================
-UPSTASH_REDIS_REST_URL=https://your-redis-instance.upstash.io
-UPSTASH_REDIS_REST_TOKEN=your-upstash-redis-token
-
-# =============================================================================
-# DATABASE CONFIGURATION
-# =============================================================================
-# Supabase Configuration
-NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
-SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
-
-# =============================================================================
-# AUTHENTICATION
-# =============================================================================
 # Clerk Authentication
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_your-clerk-publishable-key
-CLERK_SECRET_KEY=sk_test_your-clerk-secret-key
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=put-your-api-key-here
+CLERK_SECRET_KEY=put-your-api-test-key-here
 
-# NextAuth Configuration
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=your-nextauth-secret-here
+# Supabase Database
+NEXT_PUBLIC_SUPABASE_URL=put-your-supabase-url-here
+NEXT_PUBLIC_SUPABASE_ANON_KEY=put-your-supabase-anon-key-here
 
 # =============================================================================
-# CORE APPLICATION SETTINGS
+# APPLICATION SETTINGS
 # =============================================================================
-NEXT_PUBLIC_APP_URL=http://localhost:3000
-NODE_ENV=development
+
+# Application URL
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="your-nextauth-secret-here"
+
+# Environment
+NODE_ENV="development"
+NEXT_PUBLIC_DEPLOYMENT_PLATFORM="other"
 
 # =============================================================================
 # FEATURE FLAGS
 # =============================================================================
+
 NEXT_PUBLIC_ENABLE_ANALYTICS=false
 NEXT_PUBLIC_ENABLE_PWA=true
 NEXT_PUBLIC_ENABLE_REALTIME_CHAT=true
 NEXT_PUBLIC_ENABLE_IMAGE_GENERATION=true
-NEXT_PUBLIC_DEPLOYMENT_PLATFORM=other
+
+# =============================================================================
+# EMAIL SERVICE
+# =============================================================================
+
+RESEND_API_KEY=put-your-resend-api-key-here
 
 # =============================================================================
 # DEVELOPMENT SETTINGS
 # =============================================================================
+
 DEBUG_MODE=false
 SKIP_BUILD_OPTIMIZATIONS=false
-
-# =============================================================================
-# OPTIONAL INTEGRATIONS
-# =============================================================================
-# Google Services
-# GOOGLE_CLIENT_ID=your-google-client-id
-# GOOGLE_CLIENT_SECRET=your-google-client-secret
-
-# GitHub OAuth
-# GITHUB_CLIENT_ID=your-github-client-id
-# GITHUB_CLIENT_SECRET=your-github-client-secret
-
-# Analytics
-# NEXT_PUBLIC_GOOGLE_ANALYTICS_ID=GA-XXXXXXXXX
-
-# Error Tracking
-# SENTRY_DSN=your-sentry-dsn
-
-# Site Verification
-# GOOGLE_SITE_VERIFICATION=your-verification-code
