--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "openai": "^5.15.0",
+    "pdf-lib": "^1.17.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
