--- a/.env.example
+++ b/.env.example
@@ -1,65 +1,49 @@
-# =============================================================================
-# AI/ML PROVIDER KEYS (REQUIRED FOR AI FUNCTIONALITY)
-# =============================================================================
+# Next.js Configuration
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=your-nextauth-secret-key-here
 
-# Groq API Key (PRIMARY for GPT-OSS 120B - ultra-fast inference)
-# Get from: https://console.groq.com/
-GROQ_API_KEY="put-your-api-key-here"
+# Database Configuration
+DATABASE_URL=mysql://username:password@localhost:3306/stormberry
 
-# OpenRouter API Key (FALLBACK for GPT-OSS 120B and Gemini 2.5 Flash Image)
-# Get from: https://openrouter.ai/
-OPENROUTER_API_KEY="put-your-api-key-here"
+# Supabase Configuration
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
+SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
 
-# Google Gemini API Key (for Gemini 2.5 Pro/Flash text models)
-# Get from: https://aistudio.google.com/app/apikey
-GEMINI_API_KEY="put-your-api-key-here"
+# Clerk Authentication (from your HowTo guide)
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=your-clerk-key
+CLERK_SECRET_KEY=your-clerk-key
 
-# OpenAI API Key (for GPT models - currently disabled but available)
-OPENAI_API_KEY="put-your-api-key-here"
+# AI Service API Keys
+OPENAI_API_KEY=your-openai-api-key
+GROQ_API_KEY=your-groq-api-key
+OPENROUTER_API_KEY=your-openrouter-api-key
+GEMINI_API_KEY=your-gemini-api-key
 
-# =============================================================================
-# AUTHENTICATION & DATABASE
-# =============================================================================
+# Voice & Audio Services (AIML for ElevenLabs)
+AIML_API_KEY=your-aiml-api-key
 
-# Clerk Authentication
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=put-your-api-key-here
-CLERK_SECRET_KEY=put-your-api-test-key-here
+# Foxit
+FOXIT_BASE_URL=https://na1.fusion.foxit.com
+FOXIT_API_KEY=your-foxit-api-key
+FOXIT_PROJECT_ID=your-foxit-project-id
 
-# Supabase Database
-NEXT_PUBLIC_SUPABASE_URL=put-your-supabase-url-here
-NEXT_PUBLIC_SUPABASE_ANON_KEY=put-your-supabase-anon-key-here
+# Voice Services
+ELEVENLABS_API_KEY=your-elevenlabs-api-key
 
-# =============================================================================
-# APPLICATION SETTINGS
-# =============================================================================
+# Communication Services
+RESEND_API_KEY=your-resend-api-key
+TWILIO_ACCOUNT_SID=your-twilio-account-sid
+TWILIO_AUTH_TOKEN=your-twilio-auth-token
 
-# Application URL
-NEXT_PUBLIC_APP_URL="http://localhost:3000"
-NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET="your-nextauth-secret-here"
+# Analytics & Monitoring
+NEXT_PUBLIC_VERCEL_ANALYTICS_ID=your-vercel-analytics-id
+GOOGLE_SITE_VERIFICATION=your-google-site-verification
 
-# Environment
-NODE_ENV="development"
-NEXT_PUBLIC_DEPLOYMENT_PLATFORM="other"
+# Polar Integration (for subscriptions)
+POLAR_ACCESS_TOKEN=your-polar-access-token
+NEXT_PUBLIC_POLAR_ORGANIZATION_ID=your-polar-org-id
 
-# =============================================================================
-# FEATURE FLAGS
-# =============================================================================
-
-NEXT_PUBLIC_ENABLE_ANALYTICS=false
-NEXT_PUBLIC_ENABLE_PWA=true
-NEXT_PUBLIC_ENABLE_REALTIME_CHAT=true
-NEXT_PUBLIC_ENABLE_IMAGE_GENERATION=true
-
-# =============================================================================
-# EMAIL SERVICE
-# =============================================================================
-
-RESEND_API_KEY=put-your-resend-api-key-here
-
-# =============================================================================
-# DEVELOPMENT SETTINGS
-# =============================================================================
-
-DEBUG_MODE=false
-SKIP_BUILD_OPTIMIZATIONS=false
+# Redis (for rate limiting)
+UPSTASH_REDIS_REST_URL=your-upstash-redis-url
+UPSTASH_REDIS_REST_TOKEN=your-upstash-redis-token
