--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@vercel/analytics": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "date-fns": "^4.1.0",
+    "docx": "^9.5.1",
     "docx-templates": "^4.14.1",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
