--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@clerk/nextjs": "^5.7.5",
@@ -57,7 +58,10 @@
     "tailwind-merge": "^3.3.1",
     "three": "^0.179.1",
     "twilio": "^5.8.2",
-    "zod": "^4.1.5"
+    "zod": "^4.1.5",
+    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -65,13 +69,10 @@
     "@types/react-dom": "^18",
     "@types/react-syntax-highlighter": "^15.5.6",
     "@types/three": "^0.160.0",
-    "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "13.4.12",
-    "postcss": "^8",
     "prisma": "^6.14.0",
     "supabase": "^2.34.3",
-    "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
 }
